2002-07-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime:        Applied SF patch #585455.
	* mime (smtp): Applied patch SF #557520/2.

2002-07-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct (tree): Fixed SF bug #578460.

	* doctools: Fixed bug #578465.

2002-07-02  Don Porter <dgp@users.sourceforge.net>

	* all.tcl: Corrected name of tcltest hook procedure

2002-06-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv: Fixed SF bug #565051.

	* mime: Fixed SF bug #548832.

2002-06-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Applied patch for bug #567428. Bug reported by Larry Virden
	  <lvirden@users.sourceforge.net>, patch by him too. Correction of
	  spelling mistakes in the documentation of various modules +
	  correction of comment placements which interfere with solaris
	  conventions for nroff output.

2002-06-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Released and tagged tcllib 1.3.0. ========================

2002-06-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dns: Fixed SF bug #564670.

2002-06-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Updated to use a default value for -modules if that
	  option is not present.

	* install.tcl: New file, alternate installer for unix and
	  windows. Execute with any tclsh and tcllib 1.3 is installed in
	  the parent directory of the tcl script library
	  directory. Courtesy Gerald Lester
	  <gwlester@users.sourceforge.net>.

	* Makefile.in (install-doc): Changed to use the doctools generated
	  nroff and html files instead of the manually written .n files.

	* configure.in (MINOR_VERSION): Updated to version 1.3

	* Makefile.in (doc): Removed tmml-doc from default set of
	  documentation.
	
	* Makefile.in (dist, install): New target 'gen-main-index'
	  encapsulates the generation of the package index for
	  tcllib. This target is used by both the direct installation