@@ -1,3 +1,8 @@
+2002-08-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* pool.tcl: Fixed bug SF #585093, reported by Michael Cleverly
+	  <cleverly@users.sourceforge.net>. Patch provided by Michael too.
+
 2002-07-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* tree.man: Updated the documentation to clarify the behaviour.
