@@ -1,3 +1,7 @@
+2002-08-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* struct (pool): Fixed bug SF #585093.
+
 2002-07-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* mime:        Applied SF patch #585455.
